--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="exploreStyles.css" />
     <link rel="stylesheet" href="indexStyles.css" />
-    <script src="/src/main.js" type="module"></script>
-    <script src="/src/fridgeHandler.js" type="module"></script>
-    <script src="/src/search.js" type="module"></script>
-    <script src="/src/cards.js" type="module"></script>
-    <script src="/src/navbar.js" type="module"></script>
+    <script src="../src/main.js" type="module"></script>
+    <script src="../src/fridgeHandler.js" type="module"></script>
+    <script src="../src/search.js" type="module"></script>
+    <script src="../src/cards.js" type="module"></script>
+    <script src="../src/navbar.js" type="module"></script>
   </head>
 
   <body>
