--- a/explore.html
+++ b/explore.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="exploreStyles.css" />
-    <script type="module" src="../src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
   </head>
 
 <body>
