Testing homepage API calls, Recipe card displays, Fridge Item iteractions, minor structural changes

--- a/account.html
+++ b/account.html
@@ -11,8 +11,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="accountStyles.css">
-    <script src="src/account.js" type="module"></script>
-    <script src="src/navbar.js" type="module"></script>
+    <script src="./src/account.js" type="module"></script>
+    <script src="./src/navbar.js" type="module"></script>
 </head>
 <body>
     <nav>
