--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 </div>
               </div>
             </div>
-            <div class="search-params-panel col-md-6 border-end d-flex justify-content-center align-items-center">
-              <button type="submit" href="/#pre" class="btn btn-primary me-1" id="search">Search</button>
+            <div class="search-params-panel col-md-6 border-end d-flex align-items-center">
+              <button type="submit" href="index.html/#pre" class="btn btn-primary me-1" id="search">Search</button>
             </div>
         </div>
       </div>
