Randomizes over more results, refresh cache when queried more results

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <div class="col-12 d-flex justify-content-center">
           <hr class="col-12 col-md-12 pe-5 mb-3">
         </div>
+        <p class='text-center' id='loading'></p>
         <div class="row justify-content-center" id="cards">
 
         </div>
