modularized code for readability

--- a/explore.html
+++ b/explore.html
@@ -15,17 +15,14 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="exploreStyles.css" />
-    <script type="module" src="/WebdevTeam6/src/main.js"></script>
+    <link rel="stylesheet" href="src/exploreStyles.css" />
+    <script type="module" src="src/index.js"></script>
   </head>
+  <body>
 
-<body>
-  <nav></nav>
+    <nav></nav>
 
-  <main>
+    <main></main>
 
-    <div id = "content"></div>
-
-  </main>
 </body>
 </html>
