--- a/account.html
+++ b/account.html
@@ -15,8 +15,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/accountStyles.css">
-    <script src="src/account.js" type="module"></script>
-    <script src="./src/navbar.js" type="module"></script>
+    <script src="/WebdevTeam6/src/index.js" type="module"></script>
   </head>
   <body>
 
