--- a/explore.html
+++ b/explore.html
@@ -16,7 +16,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="src/exploreStyles.css" />
-    <script type="module" src="src/index.js"></script>
+    <script src="/WebdevTeam6/src/index.js" type="module"></script>
   </head>
   <body>
 
