--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./src/exploreStyles.css" />
     <link rel="stylesheet" href="./src/indexStyles.css" />
-    <script src="/src/index.js" type="module"></script>
+    <script src="/WebdevTeam6/src/index.js" type="module"></script>
   </head>
   <body>
 
