--- a/account.html
+++ b/account.html
@@ -18,10 +18,55 @@
     <script src="/WebdevTeam6/src/index.js" type="module"></script>
   </head>
   <body>
+  <nav></nav>
 
-    <nav></nav>
+  <main>
+    <section class="account">
+      <h2>My Account</h2>
 
-    <main></main>
+      <div class="profile">
+        <img
+                src="https://cdn.glitch.global/1332c0f6-a6bb-4b31-b54a-e78fc639b9c6/flat%2C750x%2C075%2Cf-pad%2C750x1000%2Cf8f8f8.jpg?v=1700238684341"
+                alt="Profile Picture"
+                class="profile-picture"
+        />
+        <p><span id="username">little_chef</span></p>
+      </div>
 
-</body>
+      <div class="search-container">
+        <label for="search-bar">Search Recipes:</label>
+        <input type="text" id="search-bar" placeholder="Enter recipe name, click to save" />
+      </div>
+      <div class="search-results">
+        <ul id="search-results-list"></ul>
+      </div>
+
+      <div class="saved-recipes">
+        <h3>Saved Recipes:</h3>
+        <ul>
+          <!-- add recipes selected from search -->
+        </ul>
+      </div>
+
+      <div id="recipe-details-content"><strong>Select a Saved Recipe to See Details:</strong></div>
+
+      <div class="grocery-list">
+        <h3>Create Grocery List</h3>
+        <form id="grocery-form" action="#" method="post">
+          <div class="form-group">
+            <label for="grocery-item">Add Item to List</label>
+            <input
+                    type="text"
+                    id="grocery-item"
+                    name="grocery-item"
+                    placeholder="E.g., Tomatoes"
+            />
+          </div>
+          <button type="submit">Add to List</button>
+        </form>
+        <ul id="grocery-items"></ul>
+      </div>
+    </section>
+  </main>
+  </body>
 </html>
