--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./src/exploreStyles.css" />
     <link rel="stylesheet" href="./src/indexStyles.css" />
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous">
+    </script>
     <script src="/WebdevTeam6/src/index.js" type="module"></script>
   </head>
   <body>
@@ -24,6 +29,7 @@
     <nav></nav>
 
     <main></main>
+
 
   </body>
 </html>
