--- a/account.html
+++ b/account.html
@@ -52,7 +52,7 @@
 
       <div class="grocery-list">
         <h3>Create Grocery List</h3>
-        <form id="grocery-form" action="#" method="post">
+        <form id="grocery-form" action="#">
           <div class="form-group">
             <label for="grocery-item">Add Item to List</label>
             <input
