--- a/account.html
+++ b/account.html
@@ -52,7 +52,7 @@
 
       <div class="grocery-list">
         <h3>Create Grocery List</h3>
-        <form id="grocery-form" action="#">
+        <form id="grocery-form">
           <div class="form-group">
             <label for="grocery-item">Add Item to List</label>
             <input
@@ -62,7 +62,7 @@
                     placeholder="E.g., Tomatoes"
             />
           </div>
-          <button type="submit">Add to List</button>
+          <button href='#' id='grocery-button'>Add to List</button>
         </form>
         <ul id="grocery-items"></ul>
       </div>
