Squashed commit of the following:
commit e88cac55bea759c348f6a8004de68c0832317061
Author: You Peng <pengyg@bc.edu>
Date:   Sun Dec 3 21:51:00 2023 -0500

    Remove debug msg

commit c269443cf2739e5f28c20683192b0d496d55f282
Author: You Peng <pengyg@bc.edu>
Date:   Sun Dec 3 20:36:00 2023 -0500

    Fix grocery

commit 821909bb61cf25ff337c382765791b4a73abb708
Author: You Peng <pengyg@bc.edu>
Date:   Sun Dec 3 20:25:13 2023 -0500

    Fix

commit cda67daa6947f5bb80659d57422c17f2b106d5a8
Author: You Peng <pengyg@bc.edu>
Date:   Sun Dec 3 20:24:02 2023 -0500

    fix

commit 8859d893f78679142cd5bf35028bb2f1a504ff2e
Author: You Peng <pengyg@bc.edu>
Date:   Sun Dec 3 20:20:10 2023 -0500

    Reference Error

commit dba2ff4f4ea78b094c76e657ec47adf9c1d76097
Author: You Peng <pengyg@bc.edu>
Date:   Sun Dec 3 20:14:41 2023 -0500

    Update

    Added search params, save recipe to account through recipe cards

commit 36d232a23039f6fe9293563cf6adf9dbd8138f47
Author: You Peng <pengyg@bc.edu>
Date:   Tue Nov 28 10:17:34 2023 -0500

    Fix

commit 0d3c03b18f9a86a1c79b4eb7916fb5a7b53ac8dc
Author: You Peng <pengyg@bc.edu>
Date:   Tue Nov 28 10:13:53 2023 -0500

    modularized code for readability

commit a6b6695f881621fb3332615340c8ce4c5a4a54df
Author: You Peng <pengyg@bc.edu>
Date:   Tue Nov 21 02:21:37 2023 -0500

    Randomizes over more results, refresh cache when queried more results

commit de1df9881e24ea73ff2714a2f08dbb50bb2519df
Merge: a6faf5f 627a245
Author: You Peng <pengyg@bc.edu>
Date:   Mon Nov 20 12:04:23 2023 -0500

    Merge remote-tracking branch 'origin/deployment' into deployment

    # Conflicts:
    #	indexStyles.css

commit a6faf5f0830dbdd61f1603e64d2386cc8557bbb8
Author: You Peng <pengyg@bc.edu>
Date:   Mon Nov 20 12:04:03 2023 -0500

    Minor fix

commit 627a245048ac54e2b5044390294f26fac3223b5b
Author: You Peng <52520465+tp2716@users.noreply.github.com>
Date:   Mon Nov 20 11:55:47 2023 -0500

    Update indexStyles.css

commit 1874e564b92b46f5e61bf1035453

--- a/account.html
+++ b/account.html
@@ -1,64 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cooking App - Account Page</title>
-    <link rel="stylesheet" href="accountStyles.css" />
-    <script src="/src/Account.js" defer type="module"></script>
-    <script src="/src/Navbar.js" defer type="module"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;800&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="src/accountStyles.css">
+    <script src="/WebdevTeam6/src/index.js" type="module"></script>
   </head>
   <body>
-    <nav></nav>
+  <nav></nav>
 
-    <main>
-      <section class="account">
-        <h2>My Account</h2>
+  <main>
+    <section class="account">
+      <h2>My Account</h2>
 
-        <div class="profile">
-          <img
-            src="https://cdn.glitch.global/1332c0f6-a6bb-4b31-b54a-e78fc639b9c6/flat%2C750x%2C075%2Cf-pad%2C750x1000%2Cf8f8f8.jpg?v=1700238684341"
-            alt="Profile Picture"
-            class="profile-picture"
-          />
-          <p><span id="username">little_chef</span></p>
-        </div>
+      <div class="profile">
+        <img
+                src="https://cdn.glitch.global/1332c0f6-a6bb-4b31-b54a-e78fc639b9c6/flat%2C750x%2C075%2Cf-pad%2C750x1000%2Cf8f8f8.jpg?v=1700238684341"
+                alt="Profile Picture"
+                class="profile-picture"
+        />
+        <p><span id="username">little_chef</span></p>
+      </div>
 
-        <div class="search-container">
-          <label for="search-bar">Search Recipes:</label>
-          <input type="text" id="search-bar" placeholder="Enter recipe name, click to save" />
-        </div>
-        <div class="search-results">
-          <ul id="search-results-list"></ul>
-        </div>
+      <div class="search-container">
+        <label for="search-bar">Search Recipes:</label>
+        <input type="text" id="search-bar" placeholder="Enter recipe name, click to save" />
+      </div>
+      <div class="search-results">
+        <ul id="search-results-list"></ul>
+      </div>
 
-        <div class="saved-recipes">
-          <h3>Saved Recipes:</h3>
-          <ul>
-            <!-- add recipes selected from search -->
-          </ul>
-        </div>
-        
-        <div id="recipe-details-content"><strong>Select a Saved Recipe to See Details:</strong></div>
-        
-        <div class="grocery-list">
-          <h3>Create Grocery List</h3>
-          <form id="grocery-form" action="#" method="post">
-            <div class="form-group">
-              <label for="grocery-item">Add Item to List</label>
-              <input
-                type="text"
-                id="grocery-item"
-                name="grocery-item"
-                placeholder="E.g., Tomatoes"
-              />
-            </div>
-            <button type="submit">Add to List</button>
-          </form>
-          <ul id="grocery-items"></ul>
-        </div>
-      </section>
-    </main>
+      <div class="saved-recipes">
+        <h3>Saved Recipes:</h3>
+        <ul>
+          <!-- add recipes selected from search -->
+        </ul>
+      </div>
+
+      <div id="recipe-details-content"><strong>Select a Saved Recipe to See Details:</strong></div>
+
+      <div class="grocery-list">
+        <h3>Create Grocery List</h3>
+        <form id="grocery-form">
+          <div class="form-group">
+            <label for="grocery-item">Add Item to List</label>
+            <input
+                    type="text"
+                    id="grocery-item"
+                    name="grocery-item"
+                    placeholder="E.g., Tomatoes"
+            />
+          </div>
+          <button href='#' id='grocery-button'>Add to List</button>
+        </form>
+        <ul id="grocery-items"></ul>
+      </div>
+    </section>
+  </main>
   </body>
 </html>
-
