--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Cooking 101</title>
+    <title>Tell me what to Cook!</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Alvin Li" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;800&display=swap"
       rel="stylesheet"
@@ -15,7 +14,14 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="src/exploreStyles.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="./src/exploreStyles.css" />
+    <link rel="stylesheet" href="./src/indexStyles.css" />
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous">
+    </script>
     <script src="/WebdevTeam6/src/index.js" type="module"></script>
   </head>
   <body>
@@ -24,5 +30,6 @@
 
     <main></main>
 
-</body>
+
+  </body>
 </html>
